# EVAONLINE

./: .env.docker  .gitignore  README.md  docker-compose.yml  pyproject.toml  validate_eto_comparison.py
EVAonline_validation_v1.0.0/: CITATION.cff  README.md  complete_validation_analysis.ipynb  environment.yml  tutorial_full_pipeline.ipynb  zenodo.json
EVAonline_validation_v1.0.0/data/2_statistics_raw_dataset/: descriptive_stats_by_variable.csv  descriptive_stats_complete.csv  descriptive_stats_report.txt
EVAonline_validation_v1.0.0/data/4_eto_nasa_only/: Carolina_MA_ETo_NASA_ONLY.csv  Formosa_do_Rio_Preto_BA_ETo_NASA_ONLY.csv  Luiz_Eduardo_Magalhaes_BA_ETo_NASA_ONLY.csv  Pedro_Afonso_TO_ETo_NASA_ONLY.csv  Porto_Nacional_TO_ETo_NASA_ONLY.csv
EVAonline_validation_v1.0.0/data/4_eto_openmeteo_only/: Alvorada_do_Gurgueia_PI_ETo_OpenMeteo_ONLY.csv  Balsas_MA_ETo_OpenMeteo_ONLY.csv  Barreiras_BA_ETo_OpenMeteo_ONLY.csv  Carolina_MA_ETo_OpenMeteo_ONLY.csv  Corrente_PI_ETo_OpenMeteo_ONLY.csv  Piracicaba_SP_ETo_OpenMeteo_ONLY.csv  Porto_Nacional_TO_ETo_OpenMeteo_ONLY.csv  Sao_Desiderio_BA_ETo_OpenMeteo_ONLY.csv  Tasso_Fragoso_MA_ETo_OpenMeteo_ONLY.csv  Urucui_PI_ETo_OpenMeteo_ONLY.csv
EVAonline_validation_v1.0.0/data/5_validation_eto_evaonline/: summary_vs_openmeteo.csv  summary_vs_xavier.csv  validation_vs_openmeteo_by_city.csv  validation_vs_xavier_by_city.csv
EVAonline_validation_v1.0.0/data/7_comparison_all_sources/: COMPARISON_ALL_SOURCES.csv  SUMMARY_BY_SOURCE.csv
EVAonline_validation_v1.0.0/data/analysis_results/: complete_metrics_all_cities.csv  summary_by_source.csv
EVAonline_validation_v1.0.0/data/csv/: met_norway_oslo_demo.csv  met_norway_rio_demo.csv  nasa_power_piracicaba_demo.csv  nws_forecast_nyc_demo.csv  nws_forecast_sf_demo.csv  nws_stations_fairplay_demo.csv  nws_stations_miami_demo.csv  openmeteo_archive_brasilia_demo.csv  openmeteo_forecast_saopaulo_demo.csv
EVAonline_validation_v1.0.0/data/eto_nasa_only/: Alvorada_do_Gurgueia_PI_ETo_NASA_ONLY.csv  Araguaina_TO_ETo_NASA_ONLY.csv  Balsas_MA_ETo_NASA_ONLY.csv  Barreiras_BA_ETo_NASA_ONLY.csv  Bom_Jesus_PI_ETo_NASA_ONLY.csv  Campos_Lindos_TO_ETo_NASA_ONLY.csv  Corrente_PI_ETo_NASA_ONLY.csv  Imperatriz_MA_ETo_NASA_ONLY.csv  Piracicaba_SP_ETo_NASA_ONLY.csv  Sao_Desiderio_BA_ETo_NASA_ONLY.csv  Tasso_Fragoso_MA_ETo_NASA_ONLY.csv  Urucui_PI_ETo_NASA_ONLY.csv
EVAonline_validation_v1.0.0/data/eto_openmeteo_only/: Araguaina_TO_ETo_OpenMeteo_ONLY.csv  Bom_Jesus_PI_ETo_OpenMeteo_ONLY.csv  Campos_Lindos_TO_ETo_OpenMeteo_ONLY.csv  Formosa_do_Rio_Preto_BA_ETo_OpenMeteo_ONLY.csv  Imperatriz_MA_ETo_OpenMeteo_ONLY.csv  Luiz_Eduardo_Magalhaes_BA_ETo_OpenMeteo_ONLY.csv  Pedro_Afonso_TO_ETo_OpenMeteo_ONLY.csv  Piracicaba_SP_ETo_OpenMeteo_ONLY.csv
EVAonline_validation_v1.0.0/data/results_eto_calc_validation/: summary_vs_openmeteo.csv  summary_vs_xavier.csv  validation_vs_openmeteo_by_city.csv  validation_vs_xavier_by_city.csv
EVAonline_validation_v1.0.0/docs/: README.md  api_operational_details.md  data_sources_specifications.md  elevation_integration.md  evaonline_architecture.md  kalman_methodology.md  performance_analysis.md  regional_validation_system.md  study_area_map_generation.md  validation_eto_evaonline.md  wind_height_conversion.md
EVAonline_validation_v1.0.0/notebooks/: 01_nasa_power_api_demo.ipynb  02_nasa_power_api_demo.ipynb  02_openmeteo_archive_api_demo.ipynb  03_openmeteo_archive_api_demo.ipynb  03_openmeteo_forecast_api_demo.ipynb  04_met_norway_api_demo.ipynb  04_openmeteo_forecast_api_demo.ipynb  05_met_norway_api_demo.ipynb  05_nws_forecast_api_demo.ipynb  06_nws_forecast_api_demo.ipynb  06_nws_stations_api_demo.ipynb  07_nws_stations_api_demo.ipynb  README.md  quick_start_example.ipynb  test_nasa_power.py
EVAonline_validation_v1.0.0/scripts/: 1_generate_matopiba_map.py  2_generate_descriptive_stats.py  3_concat_row_dataset_nasapower_openmeteo.py  4_calculate_eto_data_from_openmeteo_or_nasapower.py  5_validate_eto_calc.py  6_validate_full_pipeline.py  7_compare_all_eto_sources.py  config.py
alembic/versions/: 002_add_regional_coverage_postgis.py  README_002.md
assets/css/: custom.css
backend/: main.py
backend/api/routes/: __init__.py  eto_routes.py  geolocation_routes.py  visitor_routes.py
backend/api/services/: __init__.py  climate_factory.py  climate_source_availability.py  climate_source_manager.py  climate_source_selector.py  climate_validation.py  data_download.py  geographic_utils.py  weather_utils.py
backend/api/websocket/: websocket_service.py
backend/core/: __init__.py
backend/core/analytics/: __init__.py  geolocation_service.py
backend/core/data_processing/: __init__.py  data_preprocessing.py  (+1 more)
backend/tests/: COVERAGE_REPORT.md  conftest.py
data/csv/: CITY_PIRACICABA_SP.csv
data/historical/: info_cities.csv
docker/backend/: entrypoint.sh
docs/: MONITORING.md
frontend/: IMPLEMENTATION_SUMMARY.md
frontend/callbacks/: __init__.py  eto_callbacks.py  home_callbacks.py  navigation_callbacks.py  registry.py  visitor_callbacks.py
frontend/components/: __init__.py  favorites_components.py  footer.py  navbar.py  world_map_leaflet.py
frontend/pages/: dash_eto.py  home.py
frontend/tests/: test_mode_detector.py
frontend/utils/: INTEGRATION_GUIDE.md  mode_detector.py  timezone_utils.py
tests/: test_click_minimal.py  test_frontend.py  test_geojson_layers.py  test_geojson_load.py  test_map.py  test_map_alternative.py  test_map_debug.py  test_map_workaround.py  validate_countries.py
tests/unit/: test_met_norway_client.py
validation/: batch_download_and_validate.py  config.py  consolidate_temp_data.py  regenerate_consolidated_plots.py  stats_5cities.py
validation/calculation_eto_source/: CORREÇÃO_LIMITES_VALIDACAO.py  add_xavier_to_summary.py  analyze_correction_impact.py  analyze_results.py  check_validation_region.py  compare_openmeteo_eto.py  comparison_xavier_nasa_openmeteo_original_evaonline.py  comparison_xavier_nasapower_openmeteo_evaonline.py  evaonline_eto.py  final_comparison.py  nasa_power_eto.py  open_meteo_eto.py  verify_xavier_real_data.py
(+325 files in other folders)
