# ===========================================
# PYPROJECT.TOML - EVAonline
# ===========================================

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evaonline"
version = "1.0.0"
description = "An online tool for reference EVApotranspiration estimation"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0"

# Autores
authors = [
    {name = "EVAonline Team", email = "angelassilviane@gmail.com"}
]

# Classifiers
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

keywords = ["evapotranspiration", "climate", "agriculture", "monitoring"]

# ===========================================
# DEPENDÊNCIAS PRINCIPAIS (ATUALIZADAS)
# ===========================================
dependencies = [
    # Core Framework (atualizado)
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",

    # Database (atualizado)
    "sqlalchemy>=2.0.44",
    "psycopg[binary]>=3.2.12",  # Inclui psycopg + psycopg-binary
    "alembic>=1.17.1",
    "geoalchemy2>=0.18.0",

    # Cache & Task Queue (atualizado)
    "redis>=7.0.1",
    "celery>=5.5.3",

    # Data Processing (atualizado)
    "pandas>=2.2.3",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "scikit-learn>=1.7.2",

    # Dashboard (atualizado)
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-leaflet>=1.1.3",
    "plotly>=6.3.0",
    "flask>=3.1.2",

    # Geospatial (atualizado)
    "geopandas>=1.1.1",
    "shapely>=2.1.2",
    "pyproj>=3.7.2",
    "geopy>=2.4.1",

    # Climate APIs (atualizado)
    "openmeteo-requests>=1.7.4",
    "retry-requests>=2.0.0",
    "requests-cache>=1.2.1",

    # Utilities (atualizado)
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "loguru>=0.7.3",
    "tenacity>=9.1.2",
    "pyyaml>=6.0.3",

    # Security (atualizado)
    "python-dotenv>=1.2.1",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "jwt>=1.4.0",
    "oauthlib>=3.3.1",
    "requests-oauthlib>=2.0.0",

    # HTTP Clients (atualizado)
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "aiohttp>=3.13.2",

    # Monitoring (atualizado)
    "prometheus-client>=0.23.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

# ===========================================
# DEPENDÊNCIAS OPCIONAIS
# ===========================================
[project.optional-dependencies]
dev = [
    # Testing (atualizado)
    "black>=25.9.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "faker>=37.12.0",

    # Code Quality & Formatting (atualizado)
    "black>=25.9.0",
    "isort>=7.0.0",
    "autopep8>=2.3.2",

    # Linting (atualizado)
    "flake8>=7.3.0",
    "flake8-bugbear>=25.10.21",
    "flake8-comprehensions>=3.17.0",
    "flake8-simplify>=0.22.0",
    "pylint>=4.0.2",

    # Type Checking (atualizado)
    "mypy>=1.18.2",

    # Type Stubs (atualizado)
    "types-requests>=2.32.0.20240521",
    "types-pytz>=2025.2.0.20250809",
    "types-pyyaml>=6.0.12.20250915",
    "types-redis>=4.6.0.20241004",
    "types-Flask>=1.1.6",

    # Documentation (atualizado)
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",

    # Debugging (atualizado)
    "ipdb>=0.13.13",
    "ipython>=9.6.0",

    # Pre-commit (atualizado)
    "pre-commit>=4.3.0",
]

# (atualizado)
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-timeout>=2.3.1",
    "faker>=37.12.0",
]

# (atualizado)
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",
]

# (atualizado)
production = [
    "gunicorn>=23.0.0",
    "flower>=2.0.1",
    "prometheus-flask-exporter>=0.23.2",
]

[project.urls]
Repository = "https://github.com/angelassilviane/EVAONLINE"
"Issue Tracker" = "https://github.com/angelassilviane/EVAONLINE/issues"

# ===========================================
# ENTRY POINTS
# ===========================================
[project.scripts]
evaonline-api = "backend.main:main"
evaonline-dash = "frontend.main:main"
evaonline-worker = "backend.worker:main"

# ===========================================
# FERRAMENTAS DE DESENVOLVIMENTO
# ===========================================

[tool.black]
line-length = 79
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["backend", "frontend", "config", "utils"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = [".venv", "build", "dist", "migrations"]

[tool.flake8]
max-line-length = 79
extend-ignore = "E203, W503"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "migrations",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101",
]

[tool.mypy]
python_version = "3.12.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "pydantic.*",
    "sqlalchemy.*",
    "celery.*",
    "dash.*",
    "flask.*",
    "geopandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--asyncio-mode=auto",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

#[tool.coverage.run]
#source = ["backend"]
#omit = [
#    "backend/tests/*",
#    "backend/migrations/*",
#    "backend/__init__.py",
#    "*/site-packages/*",
#]

#[tool.coverage.report]
#exclude_lines = [
#    "pragma: no cover",
#    "def __repr__",
#    "if self.debug:",
#    "if settings.DEBUG",
#    "raise AssertionError",
#    "raise NotImplementedError",
#    "if 0:",
#    "if __name__ == .__main__.:",
#    "class .*\\bProtocol\\b":,
#    "@(abc\\.)?abstractmethod",
#]

# ===========================================
# CONFIGURAÇÃO PYLINT
# ===========================================
[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "import-error",
    "no-member",
    "unused-argument",
    "broad-except",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "fixme",
    "duplicate-code",
]

[tool.pylint."BASIC"]
good-names = [
    "i",
    "j",
    "k",
    "ex",
    "Run",
    "_",
    "db",
    "app",
]

[tool.pylint."FORMAT"]
max-line-length = 79

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*", "shared_utils*"]
exclude = ["data*", "logs*", "temp*", "assets*", "config*", "docker*", "alembic*", "reports*", "database*"]
